tests/NormalTests/paczka1/fuzzy1/95417974.err
Error in line 5: h2UmhWbhqn A114 24,9
Error in line 12: SzaUfHIz A251 23,2
Error in line 10: h2UmhWbhqn A251 86,2
Error in line 15: SzaUfHIz S553 70,3
Error in line 23: SzaUfHIz A14 19,3
Error in line 18: dPJOhf3yA A251 3,9
Error in line 24: SzaUfHIz S553 33,2
